--- a/src/main/resources/templates/user/login_form.html
+++ b/src/main/resources/templates/user/login_form.html
@@ -87,9 +87,14 @@
                                                 </div>
                                             </div>
                                             <div class="col-lg-12 text-center mt-3">
-                                                <img alt="카카오로그인" th:src="@{/assets/kakao_login_medium_wide.png}" onclick="loginWithKakao()">
-                                            </div>
 
+                                                <a href="/oauth2/authorization/kakao">
+                                                    <img alt="카카오로그인" th:src="@{/assets/kakao_login_medium_wide.png}">
+                                                </a>
+                                            </div>
+                                            <div>
+
+                                            </div>
 
                                         </form>
                                     </div>
@@ -134,19 +139,6 @@
 <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 <script th:src="@{/js/velocity.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
-<!-- 카카오 로그인 -->
-<script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.min.js" charset="utf-8"></script>
-<script type="text/javascript">
-    $(document).ready(function(){
-        Kakao.init('script앱키 입력');
-        Kakao.isInitialized();
-    });
-
-    function loginWithKakao() {
-        Kakao.Auth.authorize({
-            redirectUri: 'http://localhost:8080/kakao_callback'
-        }); // 등록한 리다이렉트uri 입력
-    }
 </script>
 </body>
 </html>
