로그인 상태에서 로그인 페이지 접근시 아이디 폼 숨기기, 시작 버튼 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1080,6 +1080,17 @@ p {
 	color: #000000;
 	margin-bottom: 20px;
 }
+.style5-middle{
+	background: url(../images/style5img.jpg) no-repeat;
+	background-size: cover;
+	color: rgba(255,255,255,.7);
+	font-size: 16px;
+}
+.style5-middle h2{
+	color: #ffffff;
+	font-size: 30px;
+	line-height: 45px;
+}
 .style5 .style5-left{
 	background: url(../images/style5img.jpg) no-repeat;
 	background-size: cover;
