--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1081,7 +1081,7 @@ p {
 	margin-bottom: 20px;
 }
 .style5-middle{
-	background: url(../images/style5img.jpg) no-repeat;
+	background: url(../images/람쥐썬더.jpg) no-repeat;
 	background-size: cover;
 	color: rgba(255,255,255,.7);
 	font-size: 16px;
