--- a/src/main/resources/templates/user/my_page_form.html
+++ b/src/main/resources/templates/user/my_page_form.html
@@ -10,21 +10,25 @@
 
         <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
-        <div class="mb-3">
-            <label class="form-label">닉네임</label>
-            <input type="text" th:field="*{nickname}" class="form-control">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label class="form-label">닉네임</label>
+                <input type="text" th:field="*{nickname}" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+                <label class="form-label">이메일</label>
+                <input type="email" th:field="*{email}" class="form-control">
+            </div>
         </div>
-        <div class="mb-3">
-            <label class="form-label">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">비밀번호 확인</label>
-            <input type="password" th:field="*{password_check}" class="form-control">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label class="form-label">비밀번호</label>
+                <input type="password" th:field="*{password}" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+                <label class="form-label">비밀번호 확인</label>
+                <input type="password" th:field="*{password_check}" class="form-control">
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">정보 수정</button>
     </form>
