리뷰 저장 후, 리뷰 리스트로 이동

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <!-- 공통 헤드-->
+<link rel="stylesheet" href=".../f">
 <th:block th:replace="/layout/fragments/head :: headFragment"></th:block>
 
 <body class="h-100">
