--- a/src/main/resources/templates/review/createReview.html
+++ b/src/main/resources/templates/review/createReview.html
@@ -62,6 +62,8 @@
                         <label class="form-label">제목</label>
                         <input class="form-control form-control-lg mb-3 " type="text" th:field="*{title}" placeholder="제목을 입력해주세요.">
 
+                        <input type="date" value="start-date">
+                        <input type="date" value="end-date">
 
                         <div class="mb-3">
                             <label class="form-label">내용</label>
