--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -93,22 +93,17 @@
                         </fieldset>
                     </div>
                     <hr>
-
-
                         <div class="card-body" >
                             <div  style="white-space: pre-line;" th:text="${review.content}"></div>
                         </div>
-
-
-
                 </div>
             </div>
 
             <button type="submit" class="btn btn-outline-primary">수정</button>
-
+            <button type="submit" class="btn btn-outline-primary">삭제</button>
             <div class="card my-3">
                 <div class="card-body" >
-                    <div  style="white-space: pre-line;" th:text="${review.content}"></div>
+                    <div style="white-space: pre-line;">댓글 기능 추가 시 사용</div>
 
                     <div class="d-flex justify-content-end">
                         <div class="badge bg-light text-dark p-2 text-start">
