--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -35,6 +35,7 @@
             </li>
 
             <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:if="${page >= paging.number-5 and page <= paging.number+5}"
                 th:classappend="${page == paging.number} ? 'active'"
                 class="page-item">
                 <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
