--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody>
         <tr th:each="review, loop : ${paging}">
-            <td th:text="${loop.count} "></td>
+            <td th:text="${review.id} "></td>
             <td>
                 <a th:href="@{|/review/show/${review.id}|}" th:text="${review.title}"></a>
             </td>
@@ -27,6 +27,11 @@
     <div th:if="${!paging.isEmpty()}">
         <!--bootstrap 클래스-->
         <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${paging.number == 0} ? 'disabled'">
+                <a class="page-link" th:href="@{?(page=0, searchWord=${param.searchWord}, checkedValue=${param.checkedValue})}">
+                    <span>처음</span>
+                </a>
+            </li>
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
                 <a class="page-link"
                    th:href="@{|?page=${paging.number-1}|}">
@@ -35,10 +40,10 @@
             </li>
 
             <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-                th:if="${page >= paging.number-5 and page <= paging.number+5}"
+                th:if="${page >= paging.number/10*10 and page <= paging.number/10*10+9}"
                 th:classappend="${page == paging.number} ? 'active'"
                 class="page-item">
-                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                <a th:text="${page+1}" class="page-link" th:href="@{|?page=${page}|}"></a>
             </li>
 
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
@@ -46,9 +51,15 @@
                     <span>다음</span>
                 </a>
             </li>
+            <li class="page-item" th:classappend="${paging.number == paging.totalPages-1} ? 'disabled'">
+                <a class="page-link" th:href="@{?(page=${paging.totalPages - 1}, searchWord=${param.searchWord}, checkedValue=${param.checkedValue})}">
+                    <span>마지막</span>
+                </a>
+            </li>
         </ul>
     </div>
     <!-- 페이징처리 끝 -->
+
 
 </div>
 </html>
