리뷰 상세페이지 태그 노출 디자인 예시 추가

--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody>
         <tr th:each="review, loop : ${paging}">
-            <td th:text="${review.id} "></td>
+            <td th:text="${paging.number * paging.size+loop.index+1} "></td>
             <td>
                 <a th:href="@{|/review/show/${review.id}|}" th:text="${review.title}"></a>
             </td>
