--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -91,7 +91,38 @@
                                 <label class="custom-control-label" for="refresh">휴양</label>
                             </div>
                         </fieldset>
+                        <!-- Small Outline Checkbox -->
+
                     </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <button id="혼자" class="mb-2 btn btn-sm btn-outline-primary mr-1">혼자</button>
+                            <button id="연인끼리" class="mb-2 btn btn-sm btn-outline-secondary mr-1">연인끼리</button>
+                            <button id="가족끼리" class="mb-2 btn btn-sm btn-outline-success mr-1">가족끼리</button>
+                            <button id="친구끼리" class="mb-2 btn btn-sm btn-outline-danger mr-1">친구끼리</button>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <button id="봄" class="mb-2 btn btn-sm btn-outline-primary mr-1">봄</button>
+                            <button id="여름" class="mb-2 btn btn-sm btn-outline-secondary mr-1">여름</button>
+                            <button id="가을" class="mb-2 btn btn-sm btn-outline-success mr-1">가을</button>
+                            <button id="겨울" class="mb-2 btn btn-sm btn-outline-danger mr-1">겨울</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+
+                            <button id="인스타" class="mb-2 btn btn-sm btn-outline-primary mr-1">인스타</button>
+                            <button id="액티비티" class="mb-2 btn btn-sm btn-outline-secondary mr-1">액티비티</button>
+                            <button id="볼거리" class="mb-2 btn btn-sm btn-outline-success mr-1">볼거리</button>
+                            <button id="휴양" class="mb-2 btn btn-sm btn-outline-danger mr-1">휴양</button>
+                        </div>
+                    </div>
+                    <!-- / Small Outline Checkbox -->
+
                     <hr>
                         <div class="card-body" >
                             <div  style="white-space: pre-line;" th:text="${review.content}"></div>
