--- a/src/main/resources/templates/user/my_page_form.html
+++ b/src/main/resources/templates/user/my_page_form.html
@@ -6,54 +6,48 @@
             <h4>마이페이지</h4>
         </div>
     </div>
-    <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
-
-        <div th:replace="user/form_errors :: formErrorsFragment"></div>
-
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label class="form-label">닉네임</label>
-                <input type="text" th:field="*{nickname}" class="form-control">
-            </div>
-            <div class="form-group col-md-6">
-                <label class="form-label">이메일</label>
-                <input type="email" th:field="*{email}" class="form-control">
-            </div>
+    <div class="card card-small mb-4">
+        <div class="card-header border-bottom">
+            <h6 class="m-0">정보 수정</h6>
         </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label class="form-label">비밀번호</label>
-                <input type="password" th:field="*{password}" class="form-control">
-            </div>
-            <div class="form-group col-md-6">
-                <label class="form-label">비밀번호 확인</label>
-                <input type="password" th:field="*{password_check}" class="form-control">
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">정보 수정</button>
-    </form>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item p-3">
+                <div class="row">
+                    <div class="col">
+                        <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
+
+                            <div th:replace="user/form_errors :: formErrorsFragment"></div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">닉네임</label>
+                                    <input type="text" th:field="*{nickname}" class="form-control"
+                                           placeholder="Nickname">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">이메일</label>
+                                    <input type="email" th:field="*{email}" class="form-control"
+                                           placeholder="example@example.com">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">비밀번호</label>
+                                    <input type="password" th:field="*{password}" class="form-control"
+                                           placeholder="Password">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">비밀번호 확인</label>
+                                    <input type="password" th:field="*{password_check}" class="form-control"
+                                           placeholder="Password">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">정보 수정</button>
+                        </form>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
-<!--ROLE_USER 권한을 갖는다면 이 글이 보임-->
-<h1 sec:authorize="hasRole('ADMIN')">Has admin Role</h1>
-
-<!--ROLE_ADMIN 권한을 갖는다면 이 글이 보임-->
-<h1 sec:authorize="hasRole('USER')">Has user Role</h1>
-
-<!--어떤 권한이건 상관없이 인증이 되었다면 이 글이 보임-->
-<div sec:authorize="isAuthenticated()">
-    Only Authenticated user can see this Text
-</div>
-
-<!--인증시 사용된 객체에 대한 정보-->
-<b>Authenticated DTO:</b>
-<div sec:authentication="principal"></div>
-
-<!--인증시 사용된 객체의 Username (ID)-->
-<b>Authenticated username:</b>
-<div sec:authentication="name"></div>
-
-<!--객체의 권한-->
-<b>Authenticated user role:</b>
-<div sec:authentication="principal.authorities"></div>
-
 </html>
