레이아웃 footer 변경

--- a/src/main/resources/templates/layout/fragments/footer.html
+++ b/src/main/resources/templates/layout/fragments/footer.html
@@ -8,23 +8,26 @@
         <footer class="main-footer d-flex p-2 px-3 bg-white border-top">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="https://github.com/likelion-backendschool/DAMDA_project" target="_blank">Project github</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="https://github.com/gimminjae" target="_blank">Minjae</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="https://github.com/NeoGuRi95" target="_blank">Jeahyun</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <a class="nav-link" href="https://github.com/jdi022222" target="_blank">Dongik</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="https://github.com/JeongHyeSoo" target="_blank">Hyesoo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/sgcs11" target="_blank">Changhwa</a>
                 </li>
             </ul>
-            <span class="copyright ml-auto my-auto mr-2">Copyright © 2018
-              <a href="https://designrevision.com" rel="nofollow">DesignRevision</a>
+            <span class="copyright ml-auto my-auto mr-2">Copyright © 2022
+              <a href="https://github.com/likelion-backendschool/DAMDA_project" rel="nofollow" target="_blank">DAMDA</a>
             </span>
         </footer>
 
